--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,13 +34,13 @@ jobs:
           --file Dockerfile \
           --tag 780202038201.dkr.ecr.eu-north-1.amazonaws.com/custody-solution-api-dev:${{ env.IMAGE_TAG }}
 
-    - name: Push to ECR
-      id: ecr
-      uses: jwalton/gh-ecr-push@v2
-      with:
-        access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        region: eu-north-1
-        image: 780202038201.dkr.ecr.eu-north-1.amazonaws.com/custody-solution-api-dev:${{ env.IMAGE_TAG }}
+    - name: Build, Tag, and Push the Image to Amazon ECR
+      id: build-image
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: 780202038201.dkr.ecr.eu-north-1.amazonaws.com/custody-solution-api-dev
+        IMAGE_TAG: ${{ env.IMAGE_TAG }}
+      run: docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      
         
     
