--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,17 +28,13 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Build the Docker image
-      run: |
-        docker build . \
-          --file Dockerfile \
-          --tag 780202038201.dkr.ecr.eu-north-1.amazonaws.com/custody-solution-api-dev:${{ env.IMAGE_TAG }}
+    
 
     - name: Build, Tag, and Push the Image to Amazon ECR
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: 780202038201.dkr.ecr.eu-north-1.amazonaws.com/custody-solution-api-dev
+        ECR_REPOSITORY: custody-solution-api-dev
         IMAGE_TAG: ${{ env.IMAGE_TAG }}
       run: |
        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
