--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,11 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
-    
+    - name: Clone private rox-custody_common-modules
+      env:
+        GH_TOKEN: ${{ secrets.ROX_CUSTODY_COMMON_MODULES_TOKENS }}
+      run: |
+        git clone https://$GH_TOKEN//github.com/Dafa-Co/rox-custody_common-modules.git rox-custody_common-modules
 
     - name: Build, Tag, and Push the Image to Amazon ECR
       id: build-image
